2003-08-04  Rodrigo Moya <rodrigo@ximian.com>

	* cal-client/cal-client.[ch] (cal_client_get_default_object):
	(cal_client_get_object): use icalcomponent instead of CalComponent.

	* gui/e-cal-model.c (get_dtstart): implemented.
	(query_obj_updated_cb):
	(query_obj_removed_cb):
	(query_done_cb):
	(query_eval_error_cb): implemented missing functions.

	* gui/calendar-model.c:
	* gui/comp-editor-factory.c:
	* gui/comp-util.c:
	* gui/e-day-view.c:
	* gui/e-itip-control.c:
	* gui/e-week-view.c:
	* gui/gnome-cal.c:
	* gui/dialogs/comp-editor.c:
	* conduits/todo/todo-conduit.c:
	* conduits/calendar/calendar-conduit.c: adapted to changes
	in CalClient API.

2003-08-04  Rodrigo Moya <rodrigo@ximian.com>

	* cal-client/cal-query.[ch] (cal_query_new): added a 'CalClient'
	argument to this function.
	(cal_query_get_client): new function.

	* cal-client/cal-client.c (cal_client_get_query): added new parameter
	in call to cal_query_new ().

2003-08-01  Lorenzo Gil <lgs@sicem.biz>

	* gui/e-alarm-list.c: added the include <config.h> line at the
        beginning to enable gettext.

2003-08-01  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-cal-model.[ch] (e_cal_model_get_component_at): new function.
	(ecm_append_row): use the client from the source model.
	(e_cal_model_get_timezone, e_cal_model_set_timezone): new functions.

	* gui/e-cal-model-tasks.[ch]: new class for the tasks model.

2003-07-31  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-cal-model.[ch]: new class, based on CalendarModel to be
	an abstract class for calendar models.

	* gui/Makefile.am: added new files to build.

2003-07-30  Rodrigo Moya <rodrigo@ximian.com>

	* cal-client/cal-client-multi.[ch]:
	* cal-client/Makefile.am: removed obsolete code.

2003-07-29  Rodrigo Moya <rodrigo@ximian.com>

	Fixes all "alarm daemon doesn't start with session"

	* gui/alarm-notify/notify-main.c (main): use LIBGNOMEUI_MODULE
	instead of LIBGNOME_MODULE so that the default session client
	is created in gnome_program_init.
